# filter_pipe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup_devcontainer.sh
.github/workflows/: build.yaml  ci.yaml
doc/: index.html
src/: app.py  main.py
src/filter_pipe/: app.py  filters.py  math_ops.py  pipeline.py
src/filter_pipe/pipeline/: filters.py  math_ops.py  pipeline.py
src/filters/: filters.py
src/pipeline/: filters.py  math.py  math_ops.py  pipe.py  pipeline.py
tests/: test_filters.py  test_math.py  test_pipeline.py
tools/: index.html
